# dspy

./: example1.py  llm_as_judge.py  modules.py  pyproject.toml  signatures.py
AI_Interview_Assiistant/: README  assistant.py
adasci/: README  example1.py
